--- a/index.css
+++ b/index.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
     margin: 0px;
 }
@@ -9,12 +13,13 @@ body {
     margin-left: 5px;
 }
 
-@media(max-width:580px) {
+@media (max-width:768px) {
     .navbar {
         background-color: #EF5327;
-        height: 70px;
+        height: 50px;
         display: flex;
         justify-content: flex-end;
+        padding:10px;
     }
 
     .Elements {
@@ -40,25 +45,26 @@ body {
         flex-direction: column;
         background-image: linear-gradient(to right, #ffe599, #f9cb9c, #ea9999, #af69ee);
         margin-bottom: 10px;
+        overflow: auto;
     }
 
     .sub-container1 {
-        flex-grow: 1;
         flex-direction: column;
         justify-content: center;
-        padding:20px;
+        padding: 15px;
+        overflow: auto;
+        flex-shrink:1;
 
     }
 
     .sub-container2 {
-        flex-grow: 1;
         display: flex;
 
     }
 
     .main-heading {
-        font-family: "Roboto";
-        font-size: 30px;
+        font-family: "Monospace";
+        font-size:34px;
     }
 
     .main-para {
@@ -76,8 +82,8 @@ body {
     }
 
     .image1 {
-        width: 100vw;
-        height: 50vh;
+        width: 97vw;
+        height:250px;
         flex-shrink: 1;
     }
 
@@ -90,6 +96,8 @@ body {
         display: flex;
         flex-direction: row;
         padding: 15px;
+        overflow: auto;
+        justify-content: center;
     }
 
     .block-1 {
@@ -103,9 +111,8 @@ body {
     }
 
     .blocks-container-2 {
-        height: 150px;
         margin: 15px;
-        max-width: 300px;
+        max-width: 400px;
         background-color: #EF5327;
         padding: 30px;
         align-self: center;
@@ -114,10 +121,12 @@ body {
     .block-image-1 {
         margin: 7px;
         height: 80px;
+        width:150px;
+        margin:10px;
     }
 
     .block-image-2 {
-        height: 170px;
+        height: 190px;
     }
 
     .block-para {
@@ -135,249 +144,138 @@ body {
     }
 }
 
-@media (min-width: 770px) {
-    .navbar {
-        background-color: #EF5327;
-        height: 70px;
+@media (min-width:768px) {
+        .navbar {
+            background-color: #EF5327;
+            height: 70px;
+        }
+    
+        .Elements {
+            padding-top: 15px;
+            display: flex;
+            flex-direction: row;
+            color: black;
+            font-family: "Roboto Sans-Serif";
+            font-size: 25px;
+            justify-content: space-around;
+            list-style-type: none;
+            align-items: center;
+            font-weight: 800;
+        }
+    
+        .icon {
+            height: 30px;
+            width: 70px;
+        }
+    
+        #navIcon {
+            display: none;
+        }
+    
+        .page-container {
+            display: flex;
+            flex-direction: row;
+            background-image: linear-gradient(to right, #ffe599, #f9cb9c, #ea9999, #af69ee);
+            margin-bottom: 5px;
+            overflow: auto;
+            justify-content: space-between;
+            min-height:70vh;
+        }
+    
+        .sub-container1 {
+            flex-shrink:1;
+            flex-direction: column;
+            padding: 45px;
+            min-width:50vw;
+            width:50vw;
+    
+        }
+    
+        .sub-container2 {
+            flex-shrink: 0;
+            display: flex;
+    
+        }
+        .image1{
+            min-width: 200px;
+            max-width:500px;
+            flex-shrink:1;
+        }
+    
+        .main-heading {
+            font-family: "Roboto";
+            font-size: 40px;
+        }
+    
+        .main-para {
+            font-family: "Roboto";
+            font-size: 20px;
+        }
+    
+        .button {
+            background-color: #EF5327;
+            border-style: none;
+            min-width: 150px;
+            text-align: center;
+            color: #ffffff;
+            padding: 15px;
+        }
+    
+        .blocks-container {
+            display: flex;
+            flex-direction: row;
+        }
+    
+        .blocks-container-1 {
+            display: flex;
+            flex-direction: row;
+            padding: 45px;
+            flex-shrink: 1;
+            align-self: center;
+        }
+    
+        .block-1 {
+            display: flex;
+            flex-direction: column;
+            margin: 25px;
+        }
+    
+        .block-2 {
+            padding: 15px;
+        }
+    
+        .blocks-container-2 {
+            min-height: 200px;
+            margin: 15px;
+            max-width: 400px;
+            background-color: #EF5327;
+            padding: 15px;
+            align-self: center;
+        }
+    
+        .block-image-1 {
+            margin: 7px;
+            max-height: 210px;
+        }
+    
+        .block-image-2 {
+            max-height: 460px;
+            height:330px;
+            margin-top:15px;
+        }
+    
+        .block-para {
+            font-family: "Roboto";
+            font-size: 15px;
+        }
+    
+        .block-head {
+            font-family: "Roboto";
+            font-size: 34px;
+        }
+    
+        .click {
+            font-family: "Roboto";
+        }
     }
-
-    .Elements {
-        padding-top: 15px;
-        display: flex;
-        flex-direction: row;
-        color: black;
-        font-family: "Roboto Sans-Serif";
-        font-size: 25px;
-        justify-content: space-around;
-        list-style-type: none;
-        align-items: center;
-        font-weight: 800;
-    }
-
-    .icon {
-        height: 30px;
-        width: 70px;
-    }
-
-    #navIcon {
-        display: none;
-    }
-
-    .page-container {
-        display: flex;
-        flex-direction: row;
-        background-image: linear-gradient(to right, #ffe599, #f9cb9c, #ea9999, #af69ee);
-        margin-bottom: 5px;
-    }
-
-    .sub-container1 {
-        flex-grow: 1;
-        flex-direction: column;
-        justify-content: center;
-        padding: 45px;
-
-    }
-
-    .sub-container2 {
-        flex-grow: 1;
-        display: flex;
-
-    }
-
-    .main-heading {
-        font-family: "Roboto";
-        font-size: 55px;
-    }
-
-    .main-para {
-        font-family: "Roboto";
-        font-size: 22px;
-    }
-
-    .button {
-        background-color: #EF5327;
-        border-style: none;
-        min-width: 150px;
-        text-align: center;
-        color: #ffffff;
-        padding: 15px;
-    }
-
-    .blocks-container {
-        display: flex;
-        flex-direction: row;
-    }
-
-    .blocks-container-1 {
-        display: flex;
-        flex-direction: row;
-        padding: 45px;
-    }
-
-    .block-1 {
-        display: flex;
-        flex-direction: column;
-        margin: 25px;
-    }
-
-    .block-2 {
-        padding: 15px;
-    }
-
-    .blocks-container-2 {
-        height: 200px;
-        margin: 15px;
-        max-width: 400px;
-        background-color: #EF5327;
-        padding: 30px;
-        align-self: center;
-    }
-
-    .block-image-1 {
-        margin: 7px;
-        height: 200px;
-    }
-
-    .block-image-2 {
-        height: 440px;
-    }
-
-    .block-para {
-        font-family: "Roboto";
-        font-size: 15px;
-    }
-
-    .block-head {
-        font-family: "Roboto";
-        font-size: 34px;
-    }
-
-    .click {
-        font-family: "Roboto";
-    }
-}
-
-@media (max-width: 768px) and (min-width:500px) {
-    .navbar {
-        background-color: #EF5327;
-        height: 70px;
-        display: flex;
-        justify-content: flex-end;
-    }
-
-    .Elements {
-        padding-top: 15px;
-        color: black;
-        font-family: "Roboto Sans-Serif";
-        font-size: 25px;
-        justify-content: space-around;
-        list-style-type: none;
-        align-items: center;
-        font-weight: 800;
-        display: none;
-    }
-
-    .icon {
-        height: 30px;
-        width: 70px;
-        justify-content: flex-end;
-    }
-
-    .page-container {
-        display: flex;
-        flex-direction: column;
-        background-image: linear-gradient(to right, #ffe599, #f9cb9c, #ea9999, #af69ee);
-        margin-bottom: 10px;
-    }
-
-    .sub-container1 {
-        flex-grow: 1;
-        flex-direction: column;
-        justify-content: center;
-        padding: 45px;
-
-    }
-
-    .sub-container2 {
-        flex-grow: 1;
-        display: flex;
-
-    }
-
-    .main-heading {
-        font-family: "Roboto";
-        font-size: 55px;
-    }
-
-    .main-para {
-        font-family: "Roboto";
-        font-size: 22px;
-    }
-
-    .button {
-        background-color: #EF5327;
-        border-style: none;
-        min-width: 150px;
-        text-align: center;
-        color: #ffffff;
-        padding: 15px;
-    }
-
-    .image1 {
-        width: 100vw;
-        height: 50vh;
-    }
-
-    .blocks-container {
-        display: flex;
-        flex-direction: column;
-    }
-
-    .blocks-container-1 {
-        display: flex;
-        flex-direction: row;
-        padding: 25px;
-    }
-
-    .block-1 {
-        display: flex;
-        flex-direction: column;
-        margin: 15px;
-    }
-
-    .block-2 {
-        padding: 15px;
-    }
-
-    .blocks-container-2 {
-        height: 200px;
-        margin: 15px;
-        max-width: 400px;
-        background-color: #EF5327;
-        padding: 30px;
-        align-self: center;
-    }
-
-    .block-image-1 {
-        margin: 7px;
-        height: 180px;
-    }
-
-    .block-image-2 {
-        height: 380px;
-    }
-
-    .block-para {
-        font-family: "Roboto";
-        font-size: 15px;
-    }
-
-    .block-head {
-        font-family: "Roboto";
-        font-size: 34px;
-    }
-
-    .click {
-        font-family: "Roboto";
-    }
-}
+    
