--- a/index.css
+++ b/index.css
@@ -192,14 +192,14 @@ body {
         }
     
         .sub-container2 {
-            flex-shrink: 0;
+            flex-shrink: 1;
             display: flex;
     
         }
         .image1{
-            min-width: 200px;
             max-width:500px;
             flex-shrink:1;
+            width:300px;
         }
     
         .main-heading {
